--- a/archive/2024_S5/src/common/macros/theorems.tex
+++ b/archive/2024_S5/src/common/macros/theorems.tex
@@ -13,7 +13,7 @@
 {\sffamily\bfseries}%
 {.}%
 { }%
-{\thmname{#1}}%
+{\thmname{#1}\thmnote{~#3}}%
 
 \newcommand{\mytheorem}[5]{%
 	\ifstrequal{#5}{o}{% Standalone counter
