--- a/active_semester/src/common/macros/math.tex
+++ b/active_semester/src/common/macros/math.tex
@@ -41,8 +41,8 @@
 \providecommand{\dpar}[2]{\frac{\partial{#1}}{\partial{#2}}}
 
 % Topology notation
-\newcommand{\bolo}[1]{B\left({#1}\mathopen{}\right[\mathclose{}} % Open ball
-\newcommand{\bolf}[1]{B\left({#1}\mathopen{}\right]\mathclose{}} % Closed ball
+\newcommand{\bolo}[2]{B\left({#1}, {#2}\mathopen{}\right[\mathclose{}} % Open ball
+\newcommand{\bolf}[2]{B\left({#1}, {#2}\mathopen{}\right]\mathclose{}} % Closed ball
 
 % Limits notation
 \newcommand{\limi}{\underline{\lim}}
