--- a/active_semester/src/HAX601X_Topologie/assets/module_header.tex
+++ b/active_semester/src/HAX601X_Topologie/assets/module_header.tex
@@ -11,6 +11,7 @@
 %--------------------------------------------------------------------------------
 
 \newcommand{\abs}[1]{\left\lvert#1\right\rvert} % Absolute value
+\newcommand{\Tau}{\mathcal{T}} % Tau for topology
 %--------------------------------------------------------------------------------
 % Custom Per Subject Theorems
 %--------------------------------------------------------------------------------
