--- a/active_semester/src/HAX601X_Topologie/assets/module_header.tex
+++ b/active_semester/src/HAX601X_Topologie/assets/module_header.tex
@@ -28,5 +28,7 @@
 \mytheorem{exo}{Exercice}{matrix-mist}{}{}
 \mytheorem{exercice}{Exercice}{matrix-mist}{}{}
 \mytheorem{theorem}{Théorème}{astral}{}{}
+\mytheorem{remark}{Remarque}{verdant}{}{}
+
 
 \makeatother
