--- a/active_semester/src/HAX606X_Optimisation_Convexe/cours/chapter_main.tex
+++ b/active_semester/src/HAX606X_Optimisation_Convexe/cours/chapter_main.tex
@@ -19,7 +19,7 @@
     \addcontentsline{toc}{suprasection}{Chapitre 1 --- Optimisation en dimension finie}
     \setcounter{suprasection}{1}
     \setcounter{section}{0}
-    \input{../cours/chapter_1.tex}
+    \input{../cours/chapter_tmp.tex}
     
     %\newpage
     %\suprasection*{Chapitre 2 --- Indépendance}\label{sec:CH2}
