[QOL]: Moved \from command to common math macros

--- a/active_semester/src/common/macros/math.tex
+++ b/active_semester/src/common/macros/math.tex
@@ -69,6 +69,7 @@
 \providecommand{\B}{\mathsf{B}} % Bold symbol
 
 \newcommand{\one}{\mathds{1}}
+\newcommand{\from}{\ \colon\ }
 
 \newcommand{\smol}[1]{\text{\scriptsize{#1}}}
 
