maj 606 avec deplacement suprasection section

--- a/active_semester/src/HAX606X_Optimisation_Convexe/cours/chapter_main.tex
+++ b/active_semester/src/HAX606X_Optimisation_Convexe/cours/chapter_main.tex
@@ -4,6 +4,7 @@
 \input{../../common/macros/theorems.tex}
 \input{../assets/module_header.tex}
 \usepackage[a4paper,hmargin=30mm,vmargin=30mm]{geometry}
+\counterwithin{section}{suprasection}
 
 \title{\color{astral} \sffamily \bfseries Optimisation convexe --- Cours}
 \author{Ivan Lejeune}
