--- a/active_semester/src/HAX606X_Optimisation_Convexe/tds/td_main.tex
+++ b/active_semester/src/HAX606X_Optimisation_Convexe/tds/td_main.tex
@@ -5,7 +5,7 @@
 \input{../assets/module_header.tex}
 \usepackage[a4paper,hmargin=30mm,vmargin=30mm]{geometry}
 
-\title{\color{astral} \sffamily \bfseries Groupes et Anneaux II --- TDs}
+\title{\color{astral} \sffamily \bfseries Optimisation convexe --- TDs}
 \author{Ivan Lejeune}
 \date{\today}
 
@@ -16,7 +16,7 @@
     \tableofcontents
     
     \newpage
-    \section*{TD1 --- qqch}\label{sec:TD1}
+    \section*{TD1 --- Algorithmes 1D}\label{sec:TD1}
     \addcontentsline{toc}{section}{\nameref{sec:TD1}}
     \setcounter{section}{1}
     \setcounter{tdcounter}{0}
