--- a/active_semester/src/HAX601X_Topologie/assets/tikz/td0_exo3.tex
+++ b/active_semester/src/HAX601X_Topologie/assets/tikz/td0_exo3.tex
@@ -1,38 +1,50 @@
 \begin{center}
-    \begin{tikzpicture}
-    \begin{axis}[
-    axis equal,
-    axis lines = middle,
-    xmin = -1.5, xmax = 1.5,
-    ymin = -1.5, ymax = 1.5,
-    xlabel = {$x$},
-    ylabel = {$y$},
-    xtick = {-1, 0, 1},
-    ytick = {-1, 0, 1},
-    grid = both,
-    major grid style = {line width=.2pt,draw=gray!50},
-    minor grid style = {line width=.1pt,draw=gray!20},
-    legend pos = outer north east,
-    ]
-    % Norme 1 (losange)
-    \addplot[
-    color=blue,
-    mark=none,
-    thick,
-    ] coordinates {
-    (1, 0) (0, 1) (-1, 0) (0, -1) (1, 0)
-    };
-    \addlegendentry{$N_1$}
-
-    % Norme infinie (carré)
-    \addplot[
-    color=red,
-    mark=none,
-    thick,
-    ] coordinates {
-    (1, 1) (-1, 1) (-1, -1) (1, -1) (1, 1)
-    };
-    \addlegendentry{$N_\infty$}
-    \end{axis}
+    \begin{tikzpicture}[line cap=round,line join=round,>=triangle 45,x=1cm,y=1cm]
+        \begin{axis}[
+            x=1cm,y=1cm,
+            axis lines=middle,
+            grid style=dashed,
+            ymajorgrids=true,
+            xmajorgrids=true,
+            xmin=-2.5,
+            xmax=2.5,
+            ymin=-2.5,
+            ymax=2.5,
+            xtick={-2,-1,0,1,2},
+            ytick={-2,-1,0,1,2},
+            legend style={at={(1.2,0.95)}, nodes={scale=0.8}},
+            ]
+            % ----- Legend
+            % --- Norme 1
+            \addlegendimage{line width=1pt, color=astral};
+            \addlegendentry{\(N_1 = \mathsf{B}_1(0,1[\)}
+            % --- Norme infinie
+            \addlegendimage{line width=1pt, color=verdant};
+            \addlegendentry{\(N_\infty = \mathsf{B}_\infty(0,1[\)}
+            
+            % ----- Boules unités
+            % --- Norme 1
+            \fill[line width=2pt,color=astral,fill=verdant,fill opacity=0.1] (-1,-1) -- (-1,1) -- (1,1) -- (1,-1) -- cycle;
+            % --- Norme infinie
+            \fill[line width=2pt,color=algebraic-amber,fill=astral,fill opacity=0.2] (-0,-1) -- (-1,0) -- (0,1) -- (1,0) -- cycle;
+            
+            % ----- Contours
+            % --- Norme 1
+            \draw [line width=1pt,color=verdant] (-1,-1) -- (-1,1);
+            \draw [line width=1pt,color=verdant] (-1,1) -- (1,1);
+            \draw [line width=1pt,color=verdant] (1,1) -- (1,-1);
+            \draw [line width=1pt,color=verdant] (1,-1) -- (-1,-1);
+            % --- Norme infinie
+            \draw [line width=1pt,color=astral] (-0,-1) -- (-1,0);
+            \draw [line width=1pt,color=astral] (-1,0) -- (0,1);
+            \draw [line width=1pt,color=astral] (0,1) -- (1,0);
+            \draw [line width=1pt,color=astral] (1,0) -- (-0,-1);
+            
+            % ----- Annotations
+            % --- Norme 1
+            \draw[color=astral] (0.6, -0.8) node {\(N_1\)};
+            % --- Norme infinie
+            \draw[color=verdant] (1.1, -1.3) node {\(N_\infty\)};
+        \end{axis}
     \end{tikzpicture}
 \end{center}
